tests/unconnected-bug.out

Removing trailing traverses...

Concatenating traverses...

Simplifying network...
cavern: error: Survey not all connected to fixed stations
The following survey stations are not attached to a fixed point:
./unconnected-bug.svx:3: info: 2
