tests/unconnected-bug.svx
; pos=fail
*fix 1 0 0 0
.. 2 1.00 000 0
2 .. 1.00 000 0
